# wfc

./: .gitlab-ci.yml  Cargo.toml  README.md  log
src/: cells.rs  lib.rs  main.rs  patterns.rs  slots.rs  tiles.rs
