[package]
name = "wfc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-map = "2.4.0"
hashbag = "0.1.9"
image = "0.24.2"
integer-sqrt = "0.1.5"
num-traits = "0.2.15"
rand = "0.8.5"
strum = { version = "0.24.1", features = ["derive"] }
