[package]
name = "wfc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-map = "2.4.0"
hashbag = "0.1.9"
image = { version = "0.24.2", features = [ "png" ] }
integer-sqrt = "0.1.5"
rand = "0.8.5"
strum = { version = "0.24.1", features = ["derive"] }
